--- a/css/site.css
+++ b/css/site.css
@@ -3,7 +3,6 @@ body > header {
   position: relative;
   padding: 1rem;
   background-color: #000;
-  z-index: 1; /* for sliding top-nav */
   height: 5.75rem;
 }
 
@@ -20,7 +19,7 @@ footer {
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: 1030;
+  z-index: 999;
 }
 
 #menu-toggle {
@@ -41,7 +40,7 @@ footer {
   position: relative;
   background-color: cyan;
 }
-#slideout-menu .wrapper { /* so we don't get an hscroll bar on the offscreen menu below  */
+#slideout-menu .container { /* so we don't get an hscroll bar on the offscreen menu below  */
   position: absolute;
   top: 0;
   left: 0;
@@ -55,8 +54,8 @@ footer {
   left: 100vw; /* offscreen to the right  */
   width: inherit;
   height: inherit;
+  z-index: 999; /* above the page content */
   background-color: #111;
-  z-index: 1; /* above the page content */
   transition-property: left;
   transition-duration: .5s;
   transition-timing-function: ease-in-out;
@@ -100,11 +99,68 @@ footer {
   background-color: #1d1d1d; /* lighter than #111 */
 }
 
-#featured-projects article {
+#slideshow img {
+  width: 100%; /* scale to fit window */
+}
+
+#tagline {
+  position: relative;
+}
+#tagline header {
   display: inline-block;
-  width: 100px;
-  text-align: center;
-  border: 1px solid #000;
+  position: absolute;
+  top: -1.75rem;
+  color: #fff;
+  background-color: #111;
+  font-size: 1rem;
+  font-weight: bold;
+  padding: 0.5rem 1rem 0.5rem 5rem;
+}
+#tagline p {
+  color: #666;
+  font-size: 2rem;
+  font-style: italic;
+  line-height: 2.2rem;
+  padding: 1rem 1rem 1.5rem 1rem;
+}
+#tagline p:before { /* left quotation mark */
+  content: "\201C"; /* https://css-tricks.com/snippets/html/glyphs */
+  font-weight: bold;
+}
+#tagline p:after { /* right quotation mark */
+  content: "\201D";
+  font-weight: bold;
+}
+
+#featured-projects {
+  position: relative;
+}
+#featured-projects header {
+  display: inline-block;
+  position: absolute;
+  top: -1.75rem;
+  color: #fff;
+  background-color: #111;
+  font-size: 1rem;
+  font-weight: bold;
+  padding: 0.5rem 1rem 0.5rem 5rem;
+  z-index: 1; /* so it appears over container */
+}
+#featured-projects article {
+  float: left;
+  width: 25%;
+  position: relative;
+}
+#featured-projects article:nth-of-type(1) {
+  width: 50%;
+}
+#featured-projects img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.hidden {
+  display: none;  
 }
 
 @keyframes menuFadeIn {
