--- a/css/site.css
+++ b/css/site.css
@@ -134,6 +134,20 @@ footer {
 
 #featured-projects {
   position: relative;
+  /* display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  height: 25vh;  */
+  /* must be >= height of images or we get a blank space between rows */
+}
+#featured-projects:after {
+  content: "";
+  clear: both;
+  display: block;
+}
+#featured-projects .container {
+  float: left;
+  width: 100%;
 }
 #featured-projects header {
   display: inline-block;
@@ -149,40 +163,12 @@ footer {
 #featured-projects article {
   float: left;
   width: 25%;
-  position: relative;
-}
-#featured-projects article:nth-of-type(1) {
-  width: 50%;
+  /* flex: 0 0 25%; */
+  /* flex-grow, flex-shrink, flex-basis */
 }
 #featured-projects img {
   max-width: 100%;
   max-height: 100%;
-}
-
-/* http://thenewcode.com/844/Easy-Masonry-Layout-With-Flexbox */
-
-.flexbox {
-  display: flex;
-  flex-wrap: wrap;
-  height: 100vh;
-  max-height: 100px; /* closed up the space between rows, not sure why */
-}
-.flexbox.flexbox-row {
-  flex-direction: row;
-}
-.flexbox.flexbox-row article {
-  width: 25%; /* 4 columns */
-}
-
-.flexbox.flexbox-col {
-  flex-direction: row;
-}
-.flexbox.flexbox-col article {
-  width: 25%; /* 4 columns */
-}
-
-.flexbox img {
-  width: 100%; /* scale to fit */
 }
 
 .hidden {
