--- a/css/site.css
+++ b/css/site.css
@@ -111,14 +111,19 @@ footer {
   color: #111;
 }
 #slideshow .overlay .industry {
-  font-size: 3rem;
+  font-size: 2rem;
 }
 #slideshow .overlay .title {
-  font-size: 5rem;
+  font-size: 4rem;
+  line-height: 4rem;
   font-weight: bold;
+  padding-bottom: 1rem;
+  /* pull it into line with the industry and link */
+  position: relative;
+  left: -0.2rem;
 }
 #slideshow .overlay .link {
-  font-size: 2rem;
+  font-size: 1.5rem;
   text-decoration: none;  
 }
 
@@ -217,7 +222,7 @@ footer {
   opacity: 1;
 }
 #featured-projects .industry {
-  font-size: 1rem;
+  font-size: 1.5rem;
 }
 #featured-projects .title {
   font-size: 3rem;
