--- a/css/site.css
+++ b/css/site.css
@@ -10,6 +10,9 @@ footer {
   text-align: right;
   font-size: smaller;
   background-color: #000;
+  padding-right: 1rem;
+  height: 3rem;
+  line-height: 3rem; /* vertically centered */
 }
 
 .fixed-bottom { /* from Bootstrap css */
