--- a/css/site.css
+++ b/css/site.css
@@ -412,7 +412,7 @@ li.my-goal::before {
 
 .under-construction {
   width: 100%;
-  height: 74vh; /* use available space, but keep room for next-prev-project */
+  height: 100vh;
   color: gold;
   background-color: navy;
   font-size: 6rem;
